# openconnect-ssh

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  ecnu-ssh  install.sh  och
.github/workflows/: ci.yml  release.yml
Sources/OCHApp/: AppConfig.swift  AppModel.swift  AsyncTimeout.swift  CommandRunner.swift  ContentView.swift  HelperPaths.swift  KeychainStore.swift  Localization.swift  OCHApp.swift  PrivilegedService.swift  SSHConfigManager.swift  SetupSupport.swift  SetupWizardView.swift  StatusParsing.swift  UILayout.swift  WindowPlacement.swift
Sources/OCHPrivilegedHelper/: OCHPrivilegedHelper.swift
docs/: configuration.md  usage.md
examples/: ecnu-connect-campus-server.env.example  ecnu-ssh.env.example  och-vpn.env.example  och.env.example  ssh_config.example
rust-cli/: Cargo.toml
rust-cli/src/: config.rs  doctor.rs  i18n.rs  main.rs  platform.rs  service.rs  setup.rs  tui.rs  vpn.rs
rust-cli/tests/: proxy_command.rs
src/: connect-campus-server.sh  ecnu-openconnect-keepalive.sh  ecnu-ssh.sh  macos-vpnc-route-wrapper.sh  och-config.sh  och-openconnect-keepalive.sh  och-setup.sh  och-sudo-askpass.sh  och-vpn-shim.sh  och-vpn.sh  och.sh
systemd/: ecnu-openconnect-keepalive.service  ecnu-openconnect-keepalive.timer  ecnu-openconnect.service  och-openconnect-keepalive.service  och-openconnect-keepalive.timer  och-openconnect.service
tests/: app-config-smoke-support.swift  app-config-smoke.swift  async-timeout-smoke.swift  status-parser-smoke.swift  unit-tests.sh  window-placement-smoke.swift
(+8 files in other folders)
