[package]
name = "och-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "och"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
glob = "0.3.3"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
